--- a/voorstel/voorstel.bib
+++ b/voorstel/voorstel.bib
@@ -28,4 +28,78 @@
   urldate   = {2016-09-01},
 }
 
+@Thesis{Govaerts2022,
+  author      = {Arne Govaerts},
+  date        = {2022},
+  institution = {HOGENT},
+  title       = {Detecteren van elderspeak},
+  type        = {bathesis},
+}
+
+@Thesis{Gussem2022,
+  author      = {Sibian De Gussem},
+  date        = {2022},
+  institution = {HOGENT},
+  title       = {Nursery Tone Monitor: detecteren van elderspeak via AI},
+  type        = {bathesis},
+}
+
+@Thesis{Daems2023,
+  author      = {Benjamin Daems},
+  date        = {2023},
+  institution = {HOGENT},
+  title       = {Nursery Tone Monitor. Verbetering van elderspeech-detectie door middel van ruisonderdrukking en stilteherkenning},
+  type        = {bathesis},
+}
+
+@Thesis{Coetsiers2024,
+  author      = {Jens Coetsiers},
+  date        = {2024},
+  institution = {HOGENT},
+  title       = {Transcriptie van één-op-één-gesprekken in Vlaamse spreektaal: Evaluatie van beschikbare STT-Systemen voor het Nederlands.},
+  type        = {bathesis},
+}
+
+@Thesis{Schryver2024,
+  author      = {Bianca De Schryver},
+  date        = {2024},
+  institution = {HOGENT},
+  title       = {Whisper Spraak-naar-tekstmodel testen voor het monitoren van 'secondary babytalk' in de zorgverlening.},
+  type        = {bathesis},
+}
+
+@Thesis{Branden2024,
+  author      = {Ine Van den Branden},
+  date        = {2024},
+  institution = {HOGENT},
+  title       = {Elderspeak Detector: tekstanalyse met behulp van AI voor het detecteren van 'Secondary Babytalk' in de zorgverlening.},
+  type        = {bathesis},
+}
+
+@InProceedings{Nachmani2020,
+  author    = {Nachmani, Eliya and Adi, Yossi and Wolf, Lior},
+  booktitle = {Proceedings of the 37th International Conference on Machine Learning},
+  date      = {2020},
+  title     = {Voice Separation with an Unknown Number of Multiple Speakers},
+  editor    = {III, Hal Daumé and Singh, Aarti},
+  pages     = {7164--7175},
+  publisher = {PMLR},
+  series    = {Proceedings of Machine Learning Research},
+  url       = {https://proceedings.mlr.press/v119/nachmani20a.html},
+  volume    = {119},
+  abstract  = {We present a new method for separating a mixed audio sequence, in which multiple voices speak simultaneously. The new method employs gated neural networks that are trained to separate the voices at multiple processing steps, while maintaining the speaker in each output channel fixed. A different model is trained for every number of possible speakers, and the model with the largest number of speakers is employed to select the actual number of speakers in a given sample. Our method greatly outperforms the current state of the art, which, as we show, is not competitive for more than two speakers.},
+  pdf       = {http://proceedings.mlr.press/v119/nachmani20a/nachmani20a.pdf},
+}
+
+@Article{Zeghidour2021,
+  author       = {Zeghidour, Neil and Grangier, David},
+  date         = {2021},
+  journaltitle = {IEEE/ACM Transactions on Audio, Speech, and Language Processing},
+  title        = {Wavesplit: End-to-End Speech Separation by Speaker Clustering},
+  doi          = {10.1109/TASLP.2021.3099291},
+  pages        = {2840-2849},
+  volume       = {29},
+  keywords     = {Training;Task analysis;Speech processing;Noise measurement;Convolution;Source separation;Benchmark testing;Artificial neural networks;source separation;speech enhancement},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
