ingediende versie voor deadline 15/11

--- a/voorstel/voorstel-inhoud.tex
+++ b/voorstel/voorstel-inhoud.tex
@@ -18,7 +18,7 @@
 
 De dag van vandaag focust de zorg- en welzijnssector vooral op persoonsgerichte zorgverlening. Dit impliceert dat de zorgverleners hun communicatiestijl aanpassen aan de zorgvragers. In de context van zorgverlening bij ouderen wordt de communicatiestijl echter vaak als te betuttelend ervaren. Men noemt dit fenomeen secondary babytalk of elderspeak. Om dit te proberen verhelpen werd er in 3 bachelorproeven van voorgaande jaren een applicatie ontwikkeld die secondary babytalk kan herkennen aan de hand van kenmerken zoals toonhoogte en stemvolume \autocite{Govaerts2022,Gussem2022,Daems2023}. In 3 hierop volgende bachelorproeven werd aangetoond dat de accuraatheid van bestaande individuele modellen echter onvoldoende blijkt te zijn om gesproken Nederlands kwaliteitsvol om te zetten naar in tekst en dus te integreren in de huidige applicatie \autocite{Branden2024,Coetsiers2024,Schryver2024}.
 
-Deze bachelorproef zal focussen op het onderscheiden van verschillende stemmen. Dit zou ervoor moeten zorgen dat een onderscheid kan gemaakt worden tussen de stem van de zorgverlener en deze van de zorgvrager, om zo enkel de stem van de zorgverlener om te zetten naar geschreven tekst. Dit heeft als doel gebruikt kunnen worden in de opleiding van de zorgverleners om aan te tonen waar ze gebruik gemaakt hebben van secondary babytalk.
+Deze bachelorproef zal focussen op het onderscheiden van verschillende stemmen. Dit zou ervoor moeten zorgen dat een onderscheid kan gemaakt worden tussen de stem van de zorgverlener en deze van de zorgvrager, om zo enkel de stem van de zorgverlener om te zetten naar geschreven tekst. Dit heeft als doel gebruikt kunnen worden in de opleiding van zorgverleners om aan te tonen waar ze gebruik gemaakt hebben van secondary babytalk.
 
 %---------- Stand van zaken ---------------------------------------------------
 
@@ -35,15 +35,15 @@ Datzelfde jaar werd door \textcite{Gussem2022} geconcludeerd dat elderspeak onre
 Later onderzocht \textcite{Daems2023} hoe de detectie van elderspeech verbeterd kan worden door het toepassen van een ruisfilter en een stiltefilter. De conclusie omtrent de ruisfilter was dat deze zeker helpt, maar niet alle ruis uit het signaal kan verwijderen \autocite{Daems2023}. Om dit te verbeteren opperde \textcite{Daems2023} dat het gebruik van meerdere microfoons zou kunnen helpen.
 Wanneer het gaat over de stiltefilter, besloot \textcite{Daems2023} dat deze succesvol de stiltes kan detecteren en analyseren, wat het mogelijk maakt om stiltes te verwijderen en andere parameters te verbeteren. \textcite{Daems2023} Concludeerde echter ook dat factoren zoals geluidskwaliteit, gesproken dialect, linguïstische verschillen en het doel voor de spraakherkenning de kwaliteit ervan ook sterk beïnvloeden.
 
-\textcite{Branden2024} zocht naar verdere mogelijkheden om de accuraatheid van de detectie van elderspeak te verhogen. Uit dit onderzoek kon geconcludeerd worden dat het gebruik van een POS-tagger ervoor zorgde dat de accuraatheid significant verhoogd werd, namelijk van 92.71\% naar 99.48\% \autocite{Branden2024}. POS-tagging is een NLP techniek waarbij woordsoorten worden toegekend aan woorden of tokens en hierbij ook rekening houdt met de context \autocite{Branden2024}.
+\textcite{Branden2024} zocht naar verdere mogelijkheden om de accuraatheid van elderspeak detectie te verhogen. Uit dit onderzoek kon geconcludeerd worden dat het gebruik van een POS-tagger ervoor zorgde dat de accuraatheid significant verhoogd werd, namelijk van 92.71\% naar 99.48\% \autocite{Branden2024}. POS-tagging is een NLP techniek waarbij woordsoorten worden toegekend aan woorden of tokens en hierbij ook rekening houdt met de context \autocite{Branden2024}.
 
 Het onderzoek van \textcite{Schryver2024} had als doel om spraak naar tekst om te zetten. Hieruit moest echter de conclusie getrokken worden dat het accuraat omzetten van gesproken naar geschreven tekst nog niet mogelijk is \autocite{Schryver2024}. \textcite{Schryver2024} Heeft ook onderzocht of er mogelijkheden zijn om de performantie van de applicatie te kunnen verbeteren, maar de conclusie was dat dit niet het geval lijkt te zijn.
 
 \subsection{Onderzoek het onderscheiden van stemmen}
 
-Er zijn al verschillende onderzoeken gebeurd om stemmen te onderscheiden in audio fragmenten. \textcite{Zeghidour2021} heeft een model ontworpen dat gebruik maakt van 2 convolutionele subnetwerken om zo succesvol de verschillende signalen van elkaar te onderscheiden. Het eerste subnetwerk is een "speaker stack" die de input in kaar brengt aan de hand van een set vectoren. Het tweede subnetwerk is een "separation stack" die gebruik maakt van de input en de vector representaties. De combinatie van deze 2 subnetwerken zorgt ervoor dat het model een representatie van elke bron maakt en op basis hiervan een schatting maakt van de gescheiden signalen. \autocite{Zeghidour2021}
+Er zijn al verschillende onderzoeken gebeurd om stemmen te onderscheiden in audio fragmenten. \textcite{Zeghidour2021} hebben een model ontworpen dat gebruik maakt van 2 convolutionele subnetwerken om zo succesvol de verschillende signalen van elkaar te onderscheiden. Het eerste subnetwerk is een 'speaker stack', die de input in kaart brengt aan de hand van een set vectoren. Het tweede subnetwerk is een 'separation stack', die gebruik maakt van de input en de vector representaties. De combinatie van deze 2 subnetwerken zorgt ervoor dat het model een representatie van elke bron maakt en op basis hiervan een schatting maakt van de gescheiden signalen. \autocite{Zeghidour2021}
 
-Een later onderzoek werd gedaan door \textcite{Nachmani2020}, waar ze geprobeerd hebben om het "cocktail party probleem" op te lossen. Het "cocktailparty probleem" is een probleem waarbij het voorkomen van veel occluderende instanties het moeilijk maakt om te segmenteren. Aangezien het probleem niet kan opgelost worden met continuïteit alleen, hebben \textcite{Nachmani2020} ook een op identificatie gebaseerde component voor het verlies aan constantheid toegevoegd. Dit werd bereikt door het toevoegen van een nieuw recurrent blok, dat bestaat uit een combinatie van twee bi-directionele RNN's en een skip connectie, het gebruik van verschillende verliezen en een spraakconstantieterm \autocite{Nachmani2020}.
+Een later onderzoek werd gedaan door \textcite{Nachmani2020}, waar ze geprobeerd hebben om het 'cocktail party probleem' op te lossen. Het 'cocktailparty probleem' is een probleem waarbij het voorkomen van veel occluderende instanties het moeilijk maakt om te segmenteren. Aangezien het probleem niet kan opgelost worden met continuïteit alleen, hebben \textcite{Nachmani2020} ook een op identificatie gebaseerde component voor het verlies aan constantheid toegevoegd. Dit werd bereikt door het toevoegen van een nieuw recurrent blok, dat bestaat uit een combinatie van twee bidirectionele RNN's en een skip connectie, het gebruik van verschillende verliezen en een spraakconstantieterm \autocite{Nachmani2020}.
 
 %---------- Methodologie ------------------------------------------------------
 %TODO tijdsinschatting maken
@@ -52,7 +52,7 @@ Een later onderzoek werd gedaan door \textcite{Nachmani2020}, waar ze geprobeerd
 
 Het onderzoek zal bestaan uit een literatuurstudie en het onderzoeken en trainen van verschillende modellen. Het grootste deel van de literatuurstudie zal bestaan uit het opzoeken van reeds bestaande modellen en kijken of deze al dan niet toepasbaar zijn op dit onderzoek.
 
-Na de literatuurstudie, zullen eerst modellen getraind worden op audiofragmenten waar amper tot geen ruis aanwezig is. Eens er een model gevonden in dat erin slaagt om stemmen te scheiden op deze audiofragmenten, zal het model getraind worden met audio waar opzettelijk ruis aan toegevoegd is. Uiteindelijk zal het model gebruik maken van de audiofragmenten die reeds beschikbaar zijn door voorgaande bachelorproeven.
+Na de literatuurstudie, zullen eerst modellen getraind worden op audiofragmenten waar amper tot geen ruis aanwezig is. Eens er een model gevonden is dat erin slaagt om stemmen te scheiden op deze audiofragmenten, zal het model getraind worden met audio waar opzettelijk ruis aan toegevoegd is. Uiteindelijk zal het model gebruik maken van de audiofragmenten die reeds beschikbaar zijn door voorgaande bachelorproeven.
 
 Tot slot zal er naar een manier gezocht worden om dit model te integreren in de reeds bestaande applicatie zodat deze het model kan gebruiken om enkel op de stem van de zorgverlener (in opleiding) te focussen voor de speech-to-text.
 
