--- a/voorstel/voorstel.bib
+++ b/voorstel/voorstel.bib
@@ -102,4 +102,26 @@
   keywords     = {Training;Task analysis;Speech processing;Noise measurement;Convolution;Source separation;Benchmark testing;Artificial neural networks;source separation;speech enhancement},
 }
 
+@InBook{Nandal2019,
+  author    = {Nandal, P.},
+  booktitle = {Sustainable Communication Networks and Application},
+  date      = {2019-11},
+  title     = {Speech Separation Using Deep Learning},
+  doi       = {10.1007/978-3-030-34515-0_34},
+  isbn      = {9783030345150},
+  pages     = {319--326},
+  publisher = {Springer International Publishing},
+  issn      = {2367-4520},
+}
+
+@InProceedings{Li2021,
+  author    = {Li, Chenda and Luo, Yi and Han, Cong and Li, Jinyu and Yoshioka, Takuya and Zhou, Tianyan and Delcroix, Marc and Kinoshita, Keisuke and Boeddeker, Christoph and Qian, Yanmin and Watanabe, Shinji and Chen, Zhuo},
+  booktitle = {2021 IEEE Spoken Language Technology Workshop (SLT)},
+  title     = {Dual-Path RNN for Long Recording Speech Separation},
+  doi       = {10.1109/SLT48900.2021.9383514},
+  pages     = {865-872},
+  keywords  = {Conferences;Task analysis;Cascading style sheets;Continuous speech separation;long recording speech separation;dual-path RNN},
+  year      = {2021},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
