--- a/voorstel/FamilienaamVoornaam-BPvoorstel.tex
+++ b/voorstel/FamilienaamVoornaam-BPvoorstel.tex
@@ -49,7 +49,7 @@
 \begin{document}
 
 \begin{abstract}
-  Hier schrijf je de samenvatting van je voorstel, als een doorlopende tekst van één paragraaf. Let op: dit is geen inleiding, maar een samenvattende tekst van heel je voorstel met inleiding (voorstelling, kaderen thema), probleemstelling en centrale onderzoeksvraag, onderzoeksdoelstelling (wat zie je als het concrete resultaat van je bachelorproef?), voorgestelde methodologie, verwachte resultaten en meerwaarde van dit onderzoek (wat heeft de doelgroep aan het resultaat?).
+	Ondanks het feit dat de zorgsector de dag van vandaag vooral op persoonsgerichte zorgverlening focust, ervaren ouderen vaak dat de communicatie te betuttelend is. Dit fenomeen staat bekend als elderspeak of secondary babytalk en om dit tegen te gaan is er van de opleiding verpleegkunde aan HOGENT het initiatief om een applicatie te gebruiken die de studenten erop kan wijzen als ze gebruik maken van elderspeak. Deze applicatie werd reeds gemaakt in voorgaande bachelorproeven, maar ontbreekt nog een aantal functionaliteiten voordat deze gebruikt kan worden in de opleiding. Deze paper heeft als doel de mogelijkheid te bieden om in de applicatie enkel de stem van de zorgverlener te analyseren en signalen van secondary babytalk op te sporen. Dit wordt bereikt aan de hand van het zoeken naar en trainen van modellen die stemmen kunnen onderscheiden. Dit model wordt nadien geïmplementeerd in de applicatie. Het beoogde resultaat van deze paper is een volledig getraind model dat succesvol stemmen kan onderscheiden en geïntegreerd is in de applicatie.
 \end{abstract}
 
 \tableofcontents
